Bug 500259 - Cannot create a valid shortcut for a KCM on desktop with drag-and-drop
Summary: Cannot create a valid shortcut for a KCM on desktop with drag-and-drop
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: 6.3.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Antti Savolainen
URL:
Keywords: regression
: 513849 (view as bug list)
Depends on:
Blocks: 446031
  Show dependency treegraph
 
Reported: 2025-02-17 14:03 UTC by Patrick Silva
Modified: 2026-04-24 19:47 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2025-02-17 14:03:25 UTC
STEPS TO REPRODUCE
1. minimize all windows
2. open Kickoff and search for "shortcuts" (or another KCM)
3. drag the KCM listed in the search results and drop it on desktop
4. choose "Link here" from the context menu

OBSERVED RESULT
an item without icon is created on desktop, and Dolphin opens when I double-click on it.

EXPECTED RESULT
a valid shortcut for the KCM is created on desktop

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.3.0
KDE Frameworks Version: 6.11.0
Qt Version: 6.8.2
Graphics Platform: Wayland
Comment 1 Nate Graham 2025-02-18 17:34:56 UTC
Can reproduce.
Comment 2 Nate Graham 2025-10-21 20:48:16 UTC
The problem appears to be that when you start dragging a KCM item, the URI sent to the drag handler is applications://kcm_mouse (for example), which is in fact a valid URI.

But it's just not a URI to the KCM's desktop file, so when you drop it, the options in the drop menu are suitable for the applications://kcm_mouse URI, and don't actually get you what you want.

Probably it should instead pass the URI "file://usr/share/applications/kcm_mouse.desktop", and then all the items in the drop menu should work automatically.
Comment 3 Nate Graham 2026-01-08 19:25:43 UTC
*** Bug 513849 has been marked as a duplicate of this bug. ***
Comment 4 Bug Janitor Service 2026-04-16 09:41:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/systemsettings/-/merge_requests/403
Comment 5 Nicolas Fella 2026-04-22 13:09:26 UTC
Git commit bb049650a39ef39aca49033e38fadbc2ac3a309d by Nicolas Fella, on behalf of Antti Savolainen.
Committed on 22/04/2026 at 13:09.
Pushed by nicolasfella into branch 'master'.

systemsettingsrunner: add correct file URLs to the kickoff and krunner entries.

This allows for dragging the entry to desktop or pinning it to the taskbar.

![Screencast_20260416_124258](/uploads/6a89a2af19375bc82779f223801e8f8d/Screencast_20260416_124258.webm)

M  +3    -1    runner/systemsettingsrunner.cpp

https://invent.kde.org/plasma/systemsettings/-/commit/bb049650a39ef39aca49033e38fadbc2ac3a309d
Comment 6 Nicolas Fella 2026-04-22 13:10:08 UTC
Git commit 785bf31e3451c6ca75e987f068786196bd8d2470 by Nicolas Fella, on behalf of Antti Savolainen.
Committed on 22/04/2026 at 13:09.
Pushed by nicolasfella into branch 'Plasma/6.6'.

systemsettingsrunner: add correct file URLs to the kickoff and krunner entries.

This allows for dragging the entry to desktop or pinning it to the taskbar.

![Screencast_20260416_124258](/uploads/6a89a2af19375bc82779f223801e8f8d/Screencast_20260416_124258.webm)
(cherry picked from commit bb049650a39ef39aca49033e38fadbc2ac3a309d)

M  +3    -1    runner/systemsettingsrunner.cpp

https://invent.kde.org/plasma/systemsettings/-/commit/785bf31e3451c6ca75e987f068786196bd8d2470