systemsettingsrunner: add correct file URLs to the kickoff and krunner entries.

This allows for dragging the entry to desktop or pinning it to the taskbar.

![Screencast_20260416_124258](/uploads/6a89a2af19375bc82779f223801e8f8d/Screencast_20260416_124258.webm)

BUG: 500259